Added a text box with my name (Will)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="smile_img">Smile image</string>
 
 
+    <!-- Strings for textboxs -->
+    <string name="will">Will's Text Box :D</string>
+
 </resources>
