added text box with name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
 
     <!-- Strings for textboxs -->
     <string name="will">Will's Text Box :D</string>
+    <string name="jot">Jots Text Box?</string>
 
 </resources>
