Added my textbox

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="will">Will\'s Text Box :D</string>
     <string name="jot">Jots Text Box\?</string>
     <string name="dre">Your boy, Dre</string>
+    <string name="gerry">Gerry's Text Box</string>
 
 </resources>
